WebApiExRateProvider 리팩터링